--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
